# motor-control

./: CMakeLists.txt  CMakePresets.json  README.md
include/: motor.hpp  realtime.hpp  revisions.hpp  sensor.hpp
src/: main.cpp  motor.cpp  realtime.cpp  revisions.cpp  sensor.cpp
tests/: test_jitter.cpp
